--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="reveal">
         <div class="slides">
             <section data-markdown="index.md"
-                     data-separator="^={78}$"
-                     data-vertical="^-{78}$"
+                     data-separator="^====+$"
+                     data-vertical="^----+$"
                      data-notes="^Note:"
             </section
         </div>
@@ -26,10 +26,15 @@
     <script src="js/reveal.min.js"></script>
     <script>
         Reveal.initialize({
+            slideNumber: true,
+
             dependencies: [
+                { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
                 { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
                 { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+                { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+                { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+                { src: 'plugin/math/math.js', async: true }
             ]
         });
     </script>
