Add code highlighting themes.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Towards painless metaprogramming</title>
     <link rel="stylesheet" href="css/reveal.min.css">
     <link rel="stylesheet" href="css/theme/default.css" id="theme">
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="lib/css/highlight/zenburn.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
